syntax = "proto3";

option csharp_namespace = "DeliveryService.Backend.Customer.Grpc";

package greet;

service CustomerBackend {
  rpc MakeOrderRequest (HelloRequest) returns (HelloReply);
  rpc MakePaymentStart (HelloRequest) returns (HelloReply);
  rpc MakePaymentRespond (HelloRequest) returns (HelloReply);
  rpc PreprocessOrderRedirect (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}
